--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -1,132 +1,132 @@
-<<!DOCTYPE html>
-  <html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style5.css">
-    <title>Let's Play - Dobble </title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="css/style5.css">
+  <title>Let's Play - Strike </title>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <div class="warp" aria-labelledby="warp-label">
-            <span id="warp-label" class="warp__placeholder">
-              Let's Play !
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <div class="warp" aria-labelledby="warp-label">
+          <span id="warp-label" class="warp__placeholder">
+            Let's Play !
+          </span>
+
+          <span aria-role="presentation">
+            <span class="warp__0">
+              L
             </span>
-
-            <span aria-role="presentation">
-              <span class="warp__0">
-                L
-              </span>
-              <span class="warp__1">
-                e
-              </span>
-              <span class="warp__2">
-                t
-              </span>
-              <span class="warp__3">
-                '
-              </span>
-              <span class="warp__4">
-                s
-              </span>
-              <span class="warp__5">
-
-              </span>
-              <span class="warp__6">
-                P
-              </span>
-              <span class="warp__7">
-                l
-              </span>
-              <span class="warp__8">
-                a
-              </span>
-              <span class="warp__9">
-                y
-              </span>
-              <span class="warp__10">
-
-              </span>
-              <span class="warp__11">
-                !
-              </span>
+            <span class="warp__1">
+              e
             </span>
-          </div>
-          <a class="navbar-brand" href="#">
-            <img class="logo" src="img/logo-lesplay.png">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <span class="warp__2">
+              t
+            </span>
+            <span class="warp__3">
+              '
+            </span>
+            <span class="warp__4">
+              s
+            </span>
+            <span class="warp__5">
+
+            </span>
+            <span class="warp__6">
+              P
+            </span>
+            <span class="warp__7">
+              l
+            </span>
+            <span class="warp__8">
+              a
+            </span>
+            <span class="warp__9">
+              y
+            </span>
+            <span class="warp__10">
+
+            </span>
+            <span class="warp__11">
+              !
+            </span>
+          </span>
+        </div>
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="img/logo-lesplay.png">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                JEUX
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
+                <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
+                <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                PROMOS
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">PANIER</a>
+            </li>
+          </ul>
+
+          <div class="d-flex">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+              <button class="btn2" type="submit">Rechercher</button>
+            </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  JEUX
+                  PROFIL
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
-                  <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
-                  <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
+                  <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                  <li><a class="dropdown-item" href="#">Connexion</a></li>
+                  <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                  <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                  <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                  <li><a class="dropdown-item" href="#">Déconnexion</a></li>
                 </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  PROMOS
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
-                  <li><a class="dropdown-item" href="#">Offres du moment</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">PANIER</a>
               </li>
             </ul>
-
-            <div class="d-flex">
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-                <button class="btn2" type="submit">Rechercher</button>
-              </form>
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    PROFIL
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Enregistrement</a></li>
-                    <li><a class="dropdown-item" href="#">Connexion</a></li>
-                    <li><a class="dropdown-item" href="#">Mon compte</a></li>
-                    <li><a class="dropdown-item" href="#">Mes commandes</a></li>
-                    <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
-                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
+  <div class="wrap">
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
@@ -162,7 +162,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-    </div>
 
     <div class="d-flex row justify-content-center">
 
@@ -205,25 +204,26 @@
       <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
       <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
     </div>
+  </div>
 
+  </div>
+  <div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+    </footer>
+  </div>
 
-    <div class="b-example-divider"></div>
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-      </footer>
-    </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+</body>
 
-  </body>
-
-  </html>
+</html>
