--- a/unjeudeplateau.html
+++ b/unjeudeplateau.html
@@ -162,64 +162,64 @@
       <span class="visually-hidden">Next</span>
     </button>
 
-    <div class="wrap">
-      <div class="d-flex row justify-content-center">
-
-        <div class="card border-4 col-lg-5">
-          <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top w-50 h-50 mx-auto" alt="7Wonders">
-          <ul class="images row list-group-flush">
-            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders3-philibert.jpg"
-                class="card-img-top" alt="7Wonders"></li>
-            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders4-natureetdécouverte.jpg"
-                class="card-img-top" alt="7Wonders"></li>
-            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders5-natureetdécouverte.jpg"
-                class="card-img-top" alt="7Wonders"></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-5">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title"> 7Wonders</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-              <p class="card-text">7 plateaux | 155 cartes | 70 pièces | 46 jetons | 1 carnet de score
-                <br>
-                <br>
-                Dans 7 Wonders, vous êtes à la tête de l'une des sept grandes cités du monde antique. Votre but est de
-                faire
-                prospérer votre ville pour la rendre plus influente que celles de vos adversaires. Le futur des cités
-                légendaires comme Babylone, Éphèse ou encore Rhodes dépend de vos talents de gestionnaire. Pour inscrire
-                votre
-                cité dans l'Histoire, vous devrez agir dans différents secteurs de développement. Exploitez les
-                ressources
-                naturelles de vos terres, participez aux progrès scientifiques, développez vos relations commerciales et
-                affirmez votre suprématie militaire. Laissez votre empreinte dans l'histoire des civilisations en
-                bâtissant
-                une merveille monumentale.
-                <br>
-                <br>
-                Une partie se déroule à travers 3 âges successifs comportant chacun 6 tours de jeu. Chaque époque se
-                joue
-                de
-                manière identique et repose sur un système de draft. Chaque joueur choisit une carte de sa main, la joue
-                et
-                passe les cartes restantes au joueur suivant. Ce principe de jeu permet aux différents paquets de cartes
-                de
-                tourner entre les joueurs qui ont donc 6 cartes pour développer au mieux leur stratégie. À chaque tour,
-                les
-                participants ont 3 actions possibles : construire leur cité, développer leur merveille ou gagner de
-                l'argent.
-              </p>
-            </div>
-          </div>
-
-        </div>
-      </div>
 
     <div class="d-flex row justify-content-center">
-      <a href="#" class="card-link">Ajouter au panier</a>
-      <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
+
+      <div class="card border-4 col-lg-5">
+        <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top w-50 h-50 mx-auto" alt="7Wonders">
+        <ul class="images row list-group-flush">
+          <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders3-philibert.jpg" class="card-img-top"
+              alt="7Wonders"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders4-natureetdécouverte.jpg"
+              class="card-img-top" alt="7Wonders"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders5-natureetdécouverte.jpg"
+              class="card-img-top" alt="7Wonders"></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-5">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"> 7Wonders</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+            <p class="card-text">7 plateaux | 155 cartes | 70 pièces | 46 jetons | 1 carnet de score
+              <br>
+              <br>
+              Dans 7 Wonders, vous êtes à la tête de l'une des sept grandes cités du monde antique. Votre but est de
+              faire
+              prospérer votre ville pour la rendre plus influente que celles de vos adversaires. Le futur des cités
+              légendaires comme Babylone, Éphèse ou encore Rhodes dépend de vos talents de gestionnaire. Pour inscrire
+              votre
+              cité dans l'Histoire, vous devrez agir dans différents secteurs de développement. Exploitez les
+              ressources
+              naturelles de vos terres, participez aux progrès scientifiques, développez vos relations commerciales et
+              affirmez votre suprématie militaire. Laissez votre empreinte dans l'histoire des civilisations en
+              bâtissant
+              une merveille monumentale.
+              <br>
+              <br>
+              Une partie se déroule à travers 3 âges successifs comportant chacun 6 tours de jeu. Chaque époque se
+              joue
+              de
+              manière identique et repose sur un système de draft. Chaque joueur choisit une carte de sa main, la joue
+              et
+              passe les cartes restantes au joueur suivant. Ce principe de jeu permet aux différents paquets de cartes
+              de
+              tourner entre les joueurs qui ont donc 6 cartes pour développer au mieux leur stratégie. À chaque tour,
+              les
+              participants ont 3 actions possibles : construire leur cité, développer leur merveille ou gagner de
+              l'argent.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="d-flex row justify-content-center">
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
+    </div>
+
   </div>
 
   <div class="b-example-divider"></div>
