--- a/index.html
+++ b/index.html
@@ -17,50 +17,6 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <div class="warp" aria-labelledby="warp-label">
-          <span id="warp-label" class="warp__placeholder">
-            Let's Play !
-          </span>
-
-          <span aria-role="presentation">
-            <span class="warp__0">
-              L
-            </span>
-            <span class="warp__1">
-              e
-            </span>
-            <span class="warp__2">
-              t
-            </span>
-            <span class="warp__3">
-              '
-            </span>
-            <span class="warp__4">
-              s
-            </span>
-            <span class="warp__5">
-
-            </span>
-            <span class="warp__6">
-              P
-            </span>
-            <span class="warp__7">
-              l
-            </span>
-            <span class="warp__8">
-              a
-            </span>
-            <span class="warp__9">
-              y
-            </span>
-            <span class="warp__10">
-
-            </span>
-            <span class="warp__11">
-              !
-            </span>
-          </span>
-        </div>
         <a class="navbar-brand" href="#">
           <img class="logo" src="img/logo-lesplay.png">
         </a>
@@ -95,7 +51,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link">PANIER</a>
+              <button>PANIER</button>
+              
+              <!-- <a class="nav-link">PANIER</a> -->
             </li>
           </ul>
 
