--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
               </ul>
             </li>
             <li class="nav-item">
-              <button>PANIER</button>
-              
-              <!-- <a class="nav-link">PANIER</a> -->
+              <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                aria-controls="offcanvasExample">
+                PANIER
+              </a>
             </li>
           </ul>
 
@@ -82,10 +83,25 @@
         </div>
       </div>
     </nav>
+
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Votre panier</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div>
+          Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists,
+          etc.
+        </div>
+        
+      </div>
+    </div>
+
   </header>
   <div class="wrap">
 
-    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+    <!-- <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -110,16 +126,16 @@
             aria-label="Slide 2"></button>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </button> -->
 
     <div class="categories d-flex row justify-content-center">
       <div class="card">
@@ -146,24 +162,24 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
 
-    <div class="b-example-divider"></div>
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-      </footer>
-    </div>
+  <div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+    </footer>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
 
