fix class wrap changé en wrapper pour éviter conflit boostrap

--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -126,7 +126,7 @@
     </nav>
   </header>
 
-  <div class="wrap">
+  <div class="wrapper">
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
