--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </ul>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex flex-sm-column" role="search">
               <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
               <button class="btn2" type="submit">Rechercher</button>
             </form>
@@ -91,17 +91,27 @@
       </div>
       <div class="offcanvas-body">
         <div>
-          Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists,
-          etc.
+          <ul>
+            <li>
+              <p>Article 1 | 10€99</p>
+            </li>
+            <li>
+              <p>Article 2 | 10€99</p>
+            </li>
+            <li>
+              <p>Article 3 | 10€99</p>
+            </li>
+          </ul>
+          <p>Total : 32€97</p>
         </div>
         
       </div>
     </div>
 
   </header>
-  <div class="wrap">
+  <div class="wrapper">
 
-    <!-- <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -126,7 +136,7 @@
             aria-label="Slide 2"></button>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
