--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -126,7 +126,7 @@
     </nav>
   </header>
 
-  <div class="wrap">
+  <div class="wrapper">
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
