navbar fonctionnelle et responsive

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                 </ul>
               </li>
             </ul>
-            <form class="d-flex flex-sm-column" role="search">
+            </div>
+            <form class="d-flex flex-lg-row flex-sm-column" role="search">
               <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn2" type="submit">Rechercher</button>
+              <button class="btn" type="submit">Rechercher</button>
             </form>
           </div>
         </div>
