derniers nettoyages. Logo définitif a finir/intégrer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img class="logo" src="img/logo-lesplay.png">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+              <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -35,7 +35,7 @@
                 JEUX
               </a>
               <ul class="dropdown-menu">
-                <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
+                <li><a class="dropdown-item" href="jeux-de-des.html" target="_blank">Jeux de dés</a></li>
                 <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
                 <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
               </ul>
@@ -58,7 +58,7 @@
             </li>
           </ul>
 
-          <div class="d-flex">
+          <div class="d-flex justify-content-center">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -110,6 +110,7 @@
     </div>
 
   </header>
+
   <div class="wrapper">
 
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
