--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -181,18 +181,13 @@
     <div class="card-body">
       <h5 class="card-title"> Dobble</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-      <p class="card-text">31 dés | 1 arène |1 tapis en mousse
+      <p class="card-text">Boite en metal | 55 cartes et la règle du jeu
         <br>
         <br>
-        Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-        cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
-        Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que vous
-        le souhaitez ! Stop ou encore ? A vous de décider !
+        Dobble, le geant qui tient dans la poche ! Amusez-vous en famille avec Dobble Classique, un jeu de cartes rondes passionnant adapté aux enfants dès 6 ans. 5 mécaniques de jeu différentes dans cette boîte métal qui réunit toutes les générations.
         <br>
         <br>
-        Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-        Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-        lice pour être consacré "Grand vainqueur de l'arène" ?</p>
+        Un jeu d’observation et de réflexe dans lequel tous les joueurs jouent en même temps. Quel que soit le jeu choisi parmi les 5 variantes proposées, soyez vif et attentif pour repérer les symboles identiques entre les cartes et marquez des points.</p>
     </div>
   </div>
 
