--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -8,7 +8,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style5.css">
-  <title>Let's Play - Strike </title>
+  <title>Let's Play - Dobble </title>
 
 </head>
 
@@ -75,13 +75,13 @@
                 </ul>
               </li>
             </ul>
-            </div>
-            <form class="d-flex flex-lg-row flex-sm-column" role="search">
-              <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn" type="submit">Rechercher</button>
-            </form>
           </div>
+          <form class="d-flex flex-lg-row flex-sm-column" role="search">
+            <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+            <button class="btn" type="submit">Rechercher</button>
+          </form>
         </div>
+      </div>
       </div>
     </nav>
 
@@ -105,7 +105,7 @@
           </ul>
           <p>Total : 32€97</p>
         </div>
-        
+
       </div>
     </div>
 
@@ -139,26 +139,26 @@
       </div>
     </div>
 
-    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button> -->
+    </button>
 
     <div class="d-flex row justify-content-center">
 
       <div class="card border-4 col-lg-5">
-        <img src="img/jeuxdedes/strike.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Strike">
+        <img src="img/jeuxdecartes/dobble2.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Dobble">
         <ul class="images row list-group-flush">
-          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-              alt="Strike"></li>
-          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-              alt="Strike"></li>
-          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-              alt="Strike"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top"
+              alt="dobble"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdecartes/dobble.png" class="card-img-top" alt="dobble">
+          </li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdecartes/dobble3.JPG" class="card-img-top" alt="dobble">
+          </li>
         </ul>
       </div>
 
@@ -166,20 +166,17 @@
         <div class="card-body">
           <h5 class="card-title"> Strike</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-          <p class="card-text">31 dés | 1 arène |1 tapis en mousse
+          <p class="card-text">Boite en metal | 55 cartes et la règle du jeu
             <br>
             <br>
-            Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-            cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans
-            l'arène.
-            Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que
-            vous
-            le souhaitez ! Stop ou encore ? A vous de décider !
+            Dobble, le geant qui tient dans la poche ! Amusez-vous en famille avec Dobble Classique, un jeu de cartes
+            rondes passionnant adapté aux enfants dès 6 ans. 5 mécaniques de jeu différentes dans cette boîte métal qui
+            réunit toutes les générations.
             <br>
             <br>
-            Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-            Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-            lice pour être consacré "Grand vainqueur de l'arène" ?
+            Un jeu d’observation et de réflexe dans lequel tous les joueurs jouent en même temps. Quel que soit le jeu
+            choisi parmi les 5 variantes proposées, soyez vif et attentif pour repérer les symboles identiques entre les
+            cartes et marquez des points.
           </p>
         </div>
       </div>
@@ -191,45 +188,8 @@
     </div>
   </div>
 
-  </div>
-<<<<<<< HEAD
 
 
-
-  <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Strike">
-    <ul class="images row list-group-flush">
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-    </ul>
-  </div>
-
-  <div class="largeur"><div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title"> Dobble</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-      <p class="card-text">Boite en metal | 55 cartes et la règle du jeu
-        <br>
-        <br>
-        Dobble, le geant qui tient dans la poche ! Amusez-vous en famille avec Dobble Classique, un jeu de cartes rondes passionnant adapté aux enfants dès 6 ans. 5 mécaniques de jeu différentes dans cette boîte métal qui réunit toutes les générations.
-        <br>
-        <br>
-        Un jeu d’observation et de réflexe dans lequel tous les joueurs jouent en même temps. Quel que soit le jeu choisi parmi les 5 variantes proposées, soyez vif et attentif pour repérer les symboles identiques entre les cartes et marquez des points.</p>
-    </div>
-  </div>
-
-   <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
-    <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
-  </div>
-
-
-
-=======
->>>>>>> bba45ff45eca1549e727d0ecff669c1b5e48614f
   <div class="b-example-divider"></div>
   <div class="container">
     <footer class="py-3 my-4">
