--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -104,6 +104,11 @@
             </li>
           </ul>
           <p>Total : 32€97</p>
+                <button class="btn" type="submit">Commander</button>
+              </div>
+              
+            </div>
+          </div>
         </div>
         
       </div>
