--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -104,6 +104,7 @@
             </li>
           </ul>
           <p>Total : 32€97</p>
+          <button class="btn" type="submit">Commander</button>
         </div>
 
       </div>
