logo avec nom site

--- a/contact.html
+++ b/contact.html
@@ -16,53 +16,9 @@
 
     <header>
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <div class="warp" aria-labelledby="warp-label">
-                    <span id="warp-label" class="warp__placeholder">
-                        Let's Play !
-                    </span>
-
-                    <span aria-role="presentation">
-                        <span class="warp__0">
-                            L
-                        </span>
-                        <span class="warp__1">
-                            e
-                        </span>
-                        <span class="warp__2">
-                            t
-                        </span>
-                        <span class="warp__3">
-                            '
-                        </span>
-                        <span class="warp__4">
-                            s
-                        </span>
-                        <span class="warp__5">
-
-                        </span>
-                        <span class="warp__6">
-                            P
-                        </span>
-                        <span class="warp__7">
-                            l
-                        </span>
-                        <span class="warp__8">
-                            a
-                        </span>
-                        <span class="warp__9">
-                            y
-                        </span>
-                        <span class="warp__10">
-
-                        </span>
-                        <span class="warp__11">
-                            !
-                        </span>
-                    </span>
-                </div>
+            
                 <a class="navbar-brand" href="#">
-                    <img class="logo" src="img/logo-lesplay.png">
+                    <img class="logo" src="img/logo2.JPG">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -72,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
