--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img class="logo" src="img/logo-lesplay.png">
+          <img class="logo" src="img/logo2.JPG">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
