--- a/contact.html
+++ b/contact.html
@@ -97,17 +97,17 @@
             <div class="offcanvas-body">
               <div>
                 <ul>
-                  <li>
-                    <p>Article 1 | 10€99</p>
-                  </li>
-                  <li>
-                    <p>Article 2 | 10€99</p>
-                  </li>
-                  <li>
-                    <p>Article 3 | 10€99</p>
-                  </li>
-                </ul>
-                <p>Total : 32€97</p>
+                    <li>
+                      <p>Strike | 16€99</p>
+                    </li>
+                    <li>
+                      <p>7Wonders | 36€99</p>
+                    </li>
+                    <li>
+                      <p>Dobble | 14€99</p>
+                    </li>
+                  </ul>
+                  <p>Total : 68€97</p>
                 <button class="btn" type="submit">Commander</button>
               </div>
               
