--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -94,16 +94,16 @@
         <div>
           <ul>
             <li>
-              <p>Article 1 | 10€99</p>
+              <p>Strike | 16€99</p>
             </li>
             <li>
-              <p>Article 2 | 10€99</p>
+              <p>7Wonders | 36€99</p>
             </li>
             <li>
-              <p>Article 3 | 10€99</p>
+              <p>Dobble | 14€99</p>
             </li>
           </ul>
-          <p>Total : 32€97</p>
+          <p>Total : 68€97</p>
           <button class="btn" type="submit">Commander</button>
         </div>
 
@@ -184,7 +184,7 @@
     </div>
 
     <div class="d-flex row justify-content-center">
-      <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
+      <a href="" class="card-link col-lg-3 text-center">Ajouter au panier</a>
       <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
     </div>
   </div>
