--- a/unjeudedes.html
+++ b/unjeudedes.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+              <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -94,16 +94,16 @@
         <div>
           <ul>
             <li>
-              <p>Article 1 | 10€99</p>
+              <p>Strike | 16€99</p>
             </li>
             <li>
-              <p>Article 2 | 10€99</p>
+              <p>7Wonders | 36€99</p>
             </li>
             <li>
-              <p>Article 3 | 10€99</p>
+              <p>Dobble | 14€99</p>
             </li>
           </ul>
-          <p>Total : 32€97</p>
+          <p>Total : 68€97</p>
           <button class="btn" type="submit">Commander</button>
         </div>
       </div>
