--- a/unjeudeplateau.html
+++ b/unjeudeplateau.html
@@ -94,16 +94,16 @@
         <div>
           <ul>
             <li>
-              <p>Article 1 | 10€99</p>
+              <p>Strike | 16€99</p>
             </li>
             <li>
-              <p>Article 2 | 10€99</p>
+              <p>7Wonders | 36€99</p>
             </li>
             <li>
-              <p>Article 3 | 10€99</p>
+              <p>Dobble | 14€99</p>
             </li>
           </ul>
-          <p>Total : 32€97</p>
+          <p>Total : 68€97</p>
           <button class="btn" type="submit">Commander</button>
         </div>
 
