--- a/commande.html
+++ b/commande.html
@@ -7,10 +7,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Let's Play</title>
-
+  <link rel="stylesheet" href="css/style3.css">
+  <title>Let'sPlay - Mon panier</title>
 </head>
+
 
 <body>
 
@@ -58,7 +58,7 @@
             </li>
           </ul>
 
-          <div class="d-flex justify-content-center">
+          <div class="d-flex">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -75,13 +75,13 @@
                 </ul>
               </li>
             </ul>
-            </div>
-            <form class="d-flex flex-lg-row flex-sm-column" role="search">
-              <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn" type="submit">Rechercher</button>
-            </form>
           </div>
+          <form class="d-flex flex-lg-row flex-sm-column" role="search">
+            <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+            <button class="btn" type="submit">Rechercher</button>
+          </form>
         </div>
+      </div>
       </div>
     </nav>
 
@@ -94,26 +94,25 @@
         <div>
           <ul>
             <li>
-              <p>Strike | 16€99</p>
+              <p>Article 1 | 10€99</p>
             </li>
             <li>
-              <p>7Wonders | 36€99</p>
+              <p>Article 2 | 10€99</p>
             </li>
             <li>
-              <p>Dobble | 14€99</p>
+              <p>Article 3 | 10€99</p>
             </li>
           </ul>
-          <p>Total : 68€97</p>
-          <button class="btn" href="commande.html" type="submit">Commander</button>
+          <p>Total : 32€97</p>
+          <button class="btn" type="submit">Commander</button>
         </div>
-        
+
       </div>
     </div>
 
   </header>
 
   <div class="wrapper">
-
     <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
       <div class="carousel-inner">
@@ -150,28 +149,73 @@
       <span class="visually-hidden">Next</span>
     </button>
 
-    <div class="categories d-flex row justify-content-center">
-      <div class="card">
-        <a href="jeux-de-des.html" target="_blank"><img src="img/dice-442544_640.jpg" class="card-img-top"
-            alt="jeuxdedés"></a>
+    <div class="titre text-center mt-5 text-white">
+      <h1>Jeux de dés</h1>
+    </div>
+
+    <div class="listcard1 text-center d-flex row justify-content-center mt-4">
+      <div class="card border-4 p-2 mb-5 mx-4">
+        <a href="unjeudedes.html" target="_blank"><img src="img/jeuxdedes/strike.jpeg" class="card-img-top"
+            alt="Image Strike"></a>
         <div class="card-body">
-          <p class="card-text">Jeux de dés</p>
+          <h5 class="card-title text-white">Strike</h5>
+          <p class="card-text text-white">Jeu d'ambiance | Dès 8 ans | 2
+            à 5
+            joueurs | 15 min</p>
+          <p>16€99</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
 
-      <div class="card">
-        <a href="jeux-de-cartes.html" target="_blank"><img src="img/pexels-pavel-danilyuk-8111371.jpg"
-            class="card-img-top" alt="jeuxdecartes"></a>
+
+      <div class="card border-4 p-2 mb-5 mx-4">
+        <img src="img/jeuxdedes/yahtzee1.jpeg" class="card-img-top" alt="Image Yatzee">
         <div class="card-body">
-          <p class="card-text">Jeux de cartes</p>
+          <h5 class="card-title text-white">Yatzee</h5>
+          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2 à 8 joueurs
+            | 30 min</p>
+          <p>20€26</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
 
-      <div class="card">
-        <a href="jeux-de-plateau.html" target="_blank"><img src="img/pexels-cottonbro-studio-4004429.jpg"
-            class="card-img-top" alt="jeuxdeplateaux"></a>
+
+      <div class="card border-4 p-2 mb-5 mx-4">
+        <img src="img/jeuxdedes/dice force1.jpeg" class="card-img-top" alt="Image 7wonders">
         <div class="card-body">
-          <p class="card-text">Jeux de plateaux</p>
+          <h5 class="card-title text-white">Dice Force</h5>
+          <p class="card-text text-white">Jeu de société | Dès 10 ans | 2
+            à 4
+            joueurs | 30 min à 1 heure</p>
+          <p>42€95</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
+      </div>
+
+      <br>
+
+      <div class="card border-4 p-2 mb-5 mx-4">
+        <img src="img/jeuxdedes/qwixx1.jpeg" class="card-img-top" alt="Image 7wonders">
+        <div class="card-body">
+          <h5 class="card-title text-white">Qwixx</h5>
+          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
+            à 5
+            joueurs | 15 min</p>
+          <p>16€99</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
+        </div>
+      </div>
+
+
+      <div class="card border-4 p-2 mb-5 mx-4">
+        <img src="img/jeuxdedes/perudo1.jpeg" class="card-img-top" alt="Image 7wonders">
+        <div class="card-body">
+          <h5 class="card-title text-white">Perudo</h5>
+          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
+            à 6
+            joueurs | 30 minutes</p>
+          <p>19€40</p>
+          <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
     </div>
@@ -193,7 +237,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
