lien page commande non fonctionnel

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </li>
           </ul>
           <p>Total : 68€97</p>
-          <button class="btn" href="commande.html" type="submit">Commander</button>
+          <button class="btn2" href="commande.html">commande</button>
         </div>
         
       </div>
